# rust-api

./: .env  .gitignore  Cargo.toml  README.md  m.js  watch.yml
src/: lib.rs  main.rs  server.rs
src/app/: mod.rs
src/app/account/: account_controller.rs  account_model.rs  account_route.rs  account_service.rs  account_type.rs  mod.rs  transaction_model.rs  transaction_service.rs
src/app/user/: mod.rs  types.rs  user_controller.rs  user_model.rs  user_route.rs  user_service.rs
src/database/: mod.rs  product.rs  transaction.rs  user.rs
src/modules/: cors.rs  error_handler.rs  generic_type.rs  middleware copy.rs  middleware.rs  middleware_copy.rs  mod.rs  response_handler.rs  util.rs
src/modules/provider/: mod.rs
src/modules/provider/payment/: mod.rs  paystack.rs
