[package]
name = "rust-version-control-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
cargo-watch = "8.4.0"
reqwest = "0.11.18"
sha2 = "0.10.7"
hmac = "0.12.1"
log = "0.4.19"
hex-literal = "0.4.1"

shuttle-rocket = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.26.0"
shuttle-secrets = "0.23.0"
rocket_cors = "0.6.0-alpha2"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 

[scripts]
start = "cargo watch -s 'run'"

# [[bin]]
# name="app_entry_point"
# path="src/server.rs"
